// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`geocoder ARCGIS should get location from geocode feature 1`] = `
{
  "lat": 51.973520000000065,
  "lon": 0.1296100000000706,
  "name": "Mill End, Clavering, Saffron Walden, Essex, England, GBR",
  "rawGeocodedFeature": {
    "geometry": {
      "coordinates": [
        0.1296100000000706,
        51.973520000000065,
      ],
      "type": "Point",
    },
    "properties": {
      "confidence": 0.875,
      "country": "GBR",
      "country_a": "GBR",
      "county": "Essex",
      "label": "Mill End, Clavering, Saffron Walden, Essex, England, GBR",
      "locality": "Saffron Walden",
      "name": "Mill End",
      "neighbourhood": "Mill End",
      "region": "England",
      "resultId": undefined,
    },
    "type": "Feature",
  },
}
`;

exports[`geocoder ARCGIS should make autocomplete query 1`] = `
{
  "features": [
    {
      "isCollection": false,
      "magicKey": "dHA9MCNsb2M9ODU3OTE0NyNsbmc9MzMjcGw9MzI4OTA3MSNsYnM9MTQ6MjAwNTI3NTc=",
      "properties": {
        "label": "Mill Ends City Park, Portland, OR, USA",
      },
      "text": "Mill Ends City Park, Portland, OR, USA",
    },
    {
      "isCollection": false,
      "magicKey": "dHA9MCNsb2M9OTY5Mzc0MiNsbmc9MzMjcGw9NTA4NTQ2NiNsYnM9MTQ6MjAwNTI3NTI=",
      "properties": {
        "label": "Mill End Sports & Social, Penn Road, Mill End, Rickmansworth, Hertfordshire, England, WD3 8, GBR",
      },
      "text": "Mill End Sports & Social, Penn Road, Mill End, Rickmansworth, Hertfordshire, England, WD3 8, GBR",
    },
  ],
}
`;

exports[`geocoder ARCGIS should make reverse query 1`] = `
{
  "lat": 45.516198,
  "lon": -122.67324,
  "name": "SW Naito Pkwy, Portland, OR, 97204, USA",
  "rawGeocodedFeature": {
    "geometry": {
      "coordinates": [
        -122.67320084756255,
        45.516175523600715,
      ],
      "type": "Point",
    },
    "properties": {
      "country_a": "USA",
      "county": "Multnomah County",
      "label": "SW Naito Pkwy, Portland, OR, 97204, USA",
      "locality": undefined,
      "name": "SW Naito Pkwy",
      "neighbourhood": "Downtown",
      "region": "Oregon",
    },
    "type": "Feature",
  },
}
`;

exports[`geocoder ARCGIS should make reverse query with featurecollection enabled 1`] = `
{
  "features": [
    {
      "geometry": {
        "coordinates": [
          -122.67320084756255,
          45.516175523600715,
        ],
        "type": "Point",
      },
      "properties": {
        "country_a": "USA",
        "county": "Multnomah County",
        "label": "SW Naito Pkwy, Portland, OR, 97204, USA",
        "locality": undefined,
        "name": "SW Naito Pkwy",
        "neighbourhood": "Downtown",
        "region": "Oregon",
      },
      "type": "Feature",
    },
  ],
  "query": {
    "x": -122.67324,
    "y": 45.516198,
  },
}
`;

exports[`geocoder ARCGIS should make search query 1`] = `
{
  "features": [
    {
      "geometry": {
        "coordinates": [
          0.1296100000000706,
          51.973520000000065,
        ],
        "type": "Point",
      },
      "properties": {
        "confidence": 0.875,
        "country": "GBR",
        "country_a": "GBR",
        "county": "Essex",
        "label": "Mill End, Clavering, Saffron Walden, Essex, England, GBR",
        "locality": "Saffron Walden",
        "name": "Mill End",
        "neighbourhood": "Mill End",
        "region": "England",
        "resultId": undefined,
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -0.8668999999999301,
          51.558340000000044,
        ],
        "type": "Point",
      },
      "properties": {
        "confidence": 0.875,
        "country": "GBR",
        "country_a": "GBR",
        "county": "Oxfordshire",
        "label": "Mill End, Hambleden, Henley-on-Thames, Oxfordshire, England, GBR",
        "locality": "Henley-on-Thames",
        "name": "Mill End",
        "neighbourhood": "Mill End",
        "region": "England",
        "resultId": undefined,
      },
      "type": "Feature",
    },
  ],
  "query": {
    "text": "Mill Ends",
  },
}
`;

exports[`geocoder HERE should get location from geocode feature 1`] = `
{
  "lat": 45.516198,
  "lon": -122.67324,
  "name": "Mill Ends Park, Portland, OR, USA",
  "rawGeocodedFeature": {
    "geometry": {
      "coordinates": [
        -122.67324,
        45.516198,
      ],
      "type": "Point",
    },
    "properties": {
      "label": "Mill Ends Park, Portland, OR, USA",
    },
  },
}
`;

exports[`geocoder HERE should make autocomplete query 1`] = `
{
  "features": [
    {
      "geometry": {
        "coordinates": [
          -122.31701,
          47.68199,
        ],
        "type": "Point",
      },
      "properties": {
        "addendum": {
          "categories": [
            {
              "id": "600-6300-0066",
              "name": "Grocery",
              "primary": true,
            },
            {
              "id": "600-6400-0000",
              "name": "Drugstore or Pharmacy",
            },
            {
              "id": "600-6400-0069",
              "name": "Drugstore",
            },
            {
              "id": "600-6400-0070",
              "name": "Pharmacy",
            },
          ],
        },
        "country": "United States",
        "country_a": "USA",
        "country_code": "USA",
        "county": "King",
        "housenumber": "7300",
        "label": "Safeway, 7300 Roosevelt Way NE, Seattle, WA 98115-5658, United States",
        "layer": "venue",
        "locality": "Seattle",
        "name": "Safeway",
        "neighbourhood": "Roosevelt",
        "postalcode": "98115-5658",
        "region": "Washington",
        "source": "here",
        "street": "Roosevelt Way NE",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.31388,
          47.66427,
        ],
        "type": "Point",
      },
      "properties": {
        "addendum": {
          "categories": [
            {
              "id": "600-6300-0066",
              "name": "Grocery",
              "primary": true,
            },
            {
              "id": "600-6400-0000",
              "name": "Drugstore or Pharmacy",
            },
            {
              "id": "600-6400-0070",
              "name": "Pharmacy",
            },
          ],
        },
        "country": "United States",
        "country_a": "USA",
        "country_code": "USA",
        "county": "King",
        "housenumber": "4732",
        "label": "Safeway, 4732 Brooklyn Ave NE, Seattle, WA 98105-4411, United States",
        "layer": "venue",
        "locality": "Seattle",
        "name": "Safeway",
        "neighbourhood": "University District",
        "postalcode": "98105-4411",
        "region": "Washington",
        "source": "here",
        "street": "Brooklyn Ave NE",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.28943,
          47.68261,
        ],
        "type": "Point",
      },
      "properties": {
        "addendum": {
          "categories": [
            {
              "id": "600-6300-0066",
              "name": "Grocery",
              "primary": true,
            },
            {
              "id": "600-6400-0000",
              "name": "Drugstore or Pharmacy",
            },
            {
              "id": "600-6400-0069",
              "name": "Drugstore",
            },
            {
              "id": "600-6400-0070",
              "name": "Pharmacy",
            },
          ],
        },
        "country": "United States",
        "country_a": "USA",
        "country_code": "USA",
        "county": "King",
        "housenumber": "7340",
        "label": "Safeway, 7340 35th Ave NE, Seattle, WA 98115, United States",
        "layer": "venue",
        "locality": "Seattle",
        "name": "Safeway",
        "neighbourhood": "Bryant",
        "postalcode": "98115",
        "region": "Washington",
        "source": "here",
        "street": "35th Ave NE",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.35496,
          47.69285,
        ],
        "type": "Point",
      },
      "properties": {
        "addendum": {
          "categories": [
            {
              "id": "600-6300-0066",
              "name": "Grocery",
              "primary": true,
            },
            {
              "id": "600-6400-0000",
              "name": "Drugstore or Pharmacy",
            },
            {
              "id": "600-6400-0070",
              "name": "Pharmacy",
            },
          ],
        },
        "country": "United States",
        "country_a": "USA",
        "country_code": "USA",
        "county": "King",
        "housenumber": "8704",
        "label": "Safeway, 8704 Greenwood Ave N, Seattle, WA 98103, United States",
        "layer": "venue",
        "locality": "Seattle",
        "name": "Safeway",
        "neighbourhood": "Greenwood",
        "postalcode": "98103",
        "region": "Washington",
        "source": "here",
        "street": "Greenwood Ave N",
      },
      "type": "Feature",
    },
  ],
  "type": "FeatureCollection",
}
`;

exports[`geocoder HERE should make reverse query 1`] = `
{
  "lat": 45.516198,
  "lon": -122.67324,
  "name": "833 SW Naito Pkwy, Portland, OR 97204-3309, United States",
  "rawGeocodedFeature": {
    "geometry": {
      "coordinates": [
        -122.67357,
        45.5164,
      ],
      "type": "Point",
    },
    "properties": {
      "country": "United States",
      "country_a": "USA",
      "country_code": "USA",
      "county": "Multnomah",
      "housenumber": "833",
      "label": "833 SW Naito Pkwy, Portland, OR 97204-3309, United States",
      "layer": "address",
      "locality": "Portland",
      "name": "833 SW Naito Pkwy, Portland, OR 97204-3309, United States",
      "neighbourhood": "Downtown",
      "postalcode": "97204-3309",
      "region": "Oregon",
      "source": "here",
      "street": "SW Naito Pkwy",
    },
    "type": "Feature",
  },
}
`;

exports[`geocoder HERE should make reverse query with featurecollection enabled 1`] = `
{
  "features": [
    {
      "geometry": {
        "coordinates": [
          -122.67357,
          45.5164,
        ],
        "type": "Point",
      },
      "properties": {
        "country": "United States",
        "country_a": "USA",
        "country_code": "USA",
        "county": "Multnomah",
        "housenumber": "833",
        "label": "833 SW Naito Pkwy, Portland, OR 97204-3309, United States",
        "layer": "address",
        "locality": "Portland",
        "name": "833 SW Naito Pkwy, Portland, OR 97204-3309, United States",
        "neighbourhood": "Downtown",
        "postalcode": "97204-3309",
        "region": "Oregon",
        "source": "here",
        "street": "SW Naito Pkwy",
      },
      "type": "Feature",
    },
  ],
  "type": "FeatureCollection",
}
`;

exports[`geocoder HERE should make search query 1`] = `
{
  "features": [
    {
      "geometry": {
        "coordinates": [
          -122.31701,
          47.68199,
        ],
        "type": "Point",
      },
      "properties": {
        "addendum": {
          "categories": [
            {
              "id": "600-6300-0066",
              "name": "Grocery",
              "primary": true,
            },
            {
              "id": "600-6400-0000",
              "name": "Drugstore or Pharmacy",
            },
            {
              "id": "600-6400-0069",
              "name": "Drugstore",
            },
            {
              "id": "600-6400-0070",
              "name": "Pharmacy",
            },
          ],
        },
        "confidence": 1,
        "country": "United States",
        "country_a": "USA",
        "country_code": "USA",
        "county": "King",
        "housenumber": "7300",
        "label": "Safeway, 7300 Roosevelt Way NE, Seattle, WA 98115-5658, United States",
        "layer": "venue",
        "locality": "Seattle",
        "name": "Safeway",
        "neighbourhood": "Roosevelt",
        "postalcode": "98115-5658",
        "region": "Washington",
        "source": "here",
        "street": "Roosevelt Way NE",
      },
      "type": "Feature",
    },
  ],
  "type": "FeatureCollection",
}
`;

exports[`geocoder NoApiGeocoder should get location from geocode feature 1`] = `
{
  "lat": 45.516198,
  "lon": -122.67324,
  "name": "45.516198, -122.673240",
  "rawGeocodedFeature": {
    "geometry": {
      "coordinates": [
        -122.67324,
        45.516198,
      ],
      "type": "Point",
    },
    "properties": {
      "label": "45.516198, -122.673240",
    },
  },
}
`;

exports[`geocoder NoApiGeocoder should make autocomplete query 1`] = `
{
  "features": [],
  "type": "FeatureCollection",
}
`;

exports[`geocoder NoApiGeocoder should make reverse query 1`] = `
{
  "lat": 45.5162,
  "lon": -122.67324,
  "name": "45.5162, -122.67324",
  "rawGeocodedFeature": {
    "geometry": {
      "coordinates": [
        45.5162,
        -122.67324,
      ],
      "type": "Point",
    },
    "properties": {
      "name": "45.5162, -122.67324",
    },
    "type": "Feature",
  },
}
`;

exports[`geocoder NoApiGeocoder should make reverse query with featurecollection enabled 1`] = `
{
  "lat": 45.5162,
  "lon": -122.67324,
  "name": "45.5162, -122.67324",
  "rawGeocodedFeature": {
    "geometry": {
      "coordinates": [
        45.5162,
        -122.67324,
      ],
      "type": "Point",
    },
    "properties": {
      "name": "45.5162, -122.67324",
    },
    "type": "Feature",
  },
}
`;

exports[`geocoder NoApiGeocoder should make search query 1`] = `
{
  "features": [],
  "type": "FeatureCollection",
}
`;

exports[`geocoder OTP should make autocomplete query 1`] = `
{
  "features": [
    {
      "geometry": {
        "coordinates": [
          -122.29541,
          47.81606,
        ],
        "type": "Point",
      },
      "id": "CommTrans:lynntc",
      "properties": {
        "label": "Lynnwood Transit Center (Community Transit)",
        "layer": "stops",
        "modes": [
          "BUS",
        ],
        "name": "Lynnwood Transit Center",
        "secondaryLabels": [],
        "source": "otp",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.259953,
          47.930175,
        ],
        "type": "Point",
      },
      "id": "CommTrans:3199",
      "properties": {
        "label": "Seaway Transit Center (Community Transit 3199)",
        "layer": "stops",
        "modes": [
          "BUS",
        ],
        "name": "Seaway Transit Center",
        "secondaryLabels": [],
        "source": "otp",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.259948,
          47.930222,
        ],
        "type": "Point",
      },
      "id": "CommTrans:seaway",
      "properties": {
        "label": "Seaway Transit Center (Community Transit)",
        "layer": "stops",
        "modes": [],
        "name": "Seaway Transit Center",
        "secondaryLabels": [],
        "source": "otp",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.193674,
          47.615541,
        ],
        "type": "Point",
      },
      "id": "CommTrans:blvtc",
      "properties": {
        "label": "Bellevue Transit Center (Community Transit)",
        "layer": "stops",
        "modes": [
          "BUS",
        ],
        "name": "Bellevue Transit Center",
        "secondaryLabels": [],
        "source": "otp",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.10446,
          47.99976,
        ],
        "type": "Point",
      },
      "id": "CommTrans:lkspr",
      "properties": {
        "label": "Lake Stevens Transit Center (Community Transit)",
        "layer": "stops",
        "modes": [
          "BUS",
        ],
        "name": "Lake Stevens Transit Center",
        "secondaryLabels": [],
        "source": "otp",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.635696,
          47.5425906,
        ],
        "type": "Point",
      },
      "id": "Kitsap:1248",
      "properties": {
        "label": "Port Orchard Transit Center (Kitsap Transit)",
        "layer": "stops",
        "modes": [
          "BUS",
        ],
        "name": "Port Orchard Transit Center",
        "secondaryLabels": [],
        "source": "otp",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.6929522,
          47.6637255,
        ],
        "type": "Point",
      },
      "id": "Kitsap:214",
      "properties": {
        "label": "Silverdale Transit Center (STC) (Kitsap Transit)",
        "layer": "stops",
        "modes": [
          "BUS",
        ],
        "name": "Silverdale Transit Center (STC)",
        "secondaryLabels": [],
        "source": "otp",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.260421,
          47.929989,
        ],
        "type": "Point",
      },
      "id": "CommTrans:3017",
      "properties": {
        "label": "Seaway Transit Center Station (Community Transit 3017)",
        "layer": "stops",
        "modes": [
          "BUS",
        ],
        "name": "Seaway Transit Center Station",
        "secondaryLabels": [],
        "source": "otp",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.651086,
          47.75944,
        ],
        "type": "Point",
      },
      "id": "Kitsap:1066",
      "properties": {
        "label": "N. Viking Transit Center (Kitsap Transit)",
        "layer": "stops",
        "modes": [
          "BUS",
        ],
        "name": "N. Viking Transit Center",
        "secondaryLabels": [],
        "source": "otp",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.340638,
          47.774171,
        ],
        "type": "Point",
      },
      "id": "CommTrans:arvil",
      "properties": {
        "label": "Aurora Village Transit Center (Community Transit)",
        "layer": "stops",
        "modes": [
          "BUS",
        ],
        "name": "Aurora Village Transit Center",
        "secondaryLabels": [],
        "source": "otp",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.337318,
          47.4694099,
        ],
        "type": "Point",
      },
      "id": "kcm:52306",
      "properties": {
        "label": "Burien Transit Center - Bay 6 (Metro Transit 52306)",
        "layer": "stops",
        "modes": [
          "BUS",
        ],
        "name": "Burien Transit Center - Bay 6",
        "secondaryLabels": [],
        "source": "otp",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.629476,
          47.600636,
        ],
        "type": "Point",
      },
      "id": "Kitsap:1340",
      "properties": {
        "label": "Wheaton Way Transit Center Southbound (Kitsap Transit)",
        "layer": "stops",
        "modes": [
          "BUS",
        ],
        "name": "Wheaton Way Transit Center Southbound",
        "secondaryLabels": [],
        "source": "otp",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.208549,
          47.4807777,
        ],
        "type": "Point",
      },
      "id": "kcm:46477",
      "properties": {
        "label": "Renton Transit Center - Bay 2 (Metro Transit 46477)",
        "layer": "stops",
        "modes": [
          "BUS",
        ],
        "name": "Renton Transit Center - Bay 2",
        "secondaryLabels": [],
        "source": "otp",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.208786,
          47.4807777,
        ],
        "type": "Point",
      },
      "id": "kcm:46476",
      "properties": {
        "label": "Renton Transit Center - Bay 1 (Sound Transit 46476)",
        "layer": "stops",
        "modes": [
          "BUS",
        ],
        "name": "Renton Transit Center - Bay 1",
        "secondaryLabels": [],
        "source": "otp",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.629983,
          47.600601,
        ],
        "type": "Point",
      },
      "id": "Kitsap:1324",
      "properties": {
        "label": "Wheaton Way Transit Center (WWTC) (Kitsap Transit)",
        "layer": "stops",
        "modes": [
          "BUS",
        ],
        "name": "Wheaton Way Transit Center (WWTC)",
        "secondaryLabels": [],
        "source": "otp",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.207756,
          47.4800987,
        ],
        "type": "Point",
      },
      "id": "kcm:46463",
      "properties": {
        "label": "Renton Transit Center - Bay 10 (Metro Transit 46463)",
        "layer": "stops",
        "modes": [
          "BUS",
        ],
        "name": "Renton Transit Center - Bay 10",
        "secondaryLabels": [],
        "source": "otp",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.194389,
          47.6155014,
        ],
        "type": "Point",
      },
      "id": "kcm:67655",
      "properties": {
        "label": "Bellevue Transit Center - Bay 8 (Metro Transit 67655)",
        "layer": "stops",
        "modes": [
          "BUS",
        ],
        "name": "Bellevue Transit Center - Bay 8",
        "secondaryLabels": [],
        "source": "otp",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.193909,
          47.6155052,
        ],
        "type": "Point",
      },
      "id": "kcm:67654",
      "properties": {
        "label": "Bellevue Transit Center - Bay 7 (Metro Transit 67654)",
        "layer": "stops",
        "modes": [
          "BUS",
        ],
        "name": "Bellevue Transit Center - Bay 7",
        "secondaryLabels": [],
        "source": "otp",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.19426,
          47.6155014,
        ],
        "type": "Point",
      },
      "id": "kcm:68005",
      "properties": {
        "label": "Bellevue Transit Center - Bay 5 (Metro Transit 68005)",
        "layer": "stops",
        "modes": [
          "BUS",
        ],
        "name": "Bellevue Transit Center - Bay 5",
        "secondaryLabels": [],
        "source": "otp",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.208717,
          47.4804993,
        ],
        "type": "Point",
      },
      "id": "kcm:46478",
      "properties": {
        "label": "Renton Transit Center - Bay 3 (Metro Transit 46478)",
        "layer": "stops",
        "modes": [
          "BUS",
        ],
        "name": "Renton Transit Center - Bay 3",
        "secondaryLabels": [],
        "source": "otp",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.124939,
          47.6765938,
        ],
        "type": "Point",
      },
      "id": "kcm:73227",
      "properties": {
        "label": "Redmond Transit Center - Bay 1 (Sound Transit 73227)",
        "layer": "stops",
        "modes": [
          "BUS",
        ],
        "name": "Redmond Transit Center - Bay 1",
        "secondaryLabels": [],
        "source": "otp",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.232079,
          47.3057899,
        ],
        "type": "Point",
      },
      "id": "kcm:57774",
      "properties": {
        "label": "Auburn Transit Center - Bay 2 (Metro Transit 57774)",
        "layer": "stops",
        "modes": [
          "BUS",
        ],
        "name": "Auburn Transit Center - Bay 2",
        "secondaryLabels": [],
        "source": "otp",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.06221,
          47.5424728,
        ],
        "type": "Point",
      },
      "id": "kcm:64593",
      "properties": {
        "label": "Issaquah Transit Center - Bay 4 (Metro Transit 64593)",
        "layer": "stops",
        "modes": [
          "BUS",
        ],
        "name": "Issaquah Transit Center - Bay 4",
        "secondaryLabels": [],
        "source": "otp",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.232079,
          47.3062248,
        ],
        "type": "Point",
      },
      "id": "kcm:57773",
      "properties": {
        "label": "Auburn Transit Center - Bay 1 (Metro Transit 57773)",
        "layer": "stops",
        "modes": [
          "BUS",
        ],
        "name": "Auburn Transit Center - Bay 1",
        "secondaryLabels": [],
        "source": "otp",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.062302,
          47.541584,
        ],
        "type": "Point",
      },
      "id": "kcm:64585",
      "properties": {
        "label": "Issaquah Transit Center - Bay 3 (Metro Transit 64585)",
        "layer": "stops",
        "modes": [
          "BUS",
        ],
        "name": "Issaquah Transit Center - Bay 3",
        "secondaryLabels": [],
        "source": "otp",
      },
      "type": "Feature",
    },
  ],
  "type": "FeatureCollection",
}
`;

exports[`geocoder OTP should make search query 1`] = `
{
  "results": [
    {
      "primary": {
        "agencies": [
          {
            "id": "CommTrans:29",
            "name": "Community Transit",
          },
        ],
        "coordinate": {
          "lat": 47.81606,
          "lon": -122.29541,
        },
        "feedPublisher": {
          "name": "Community Transit",
        },
        "id": "CommTrans:lynntc",
        "modes": [
          "BUS",
        ],
        "name": "Lynnwood Transit Center",
        "type": "STATION",
      },
      "secondaries": [
        {
          "agencies": [
            {
              "id": "CommTrans:29",
              "name": "Community Transit",
            },
          ],
          "code": "2109",
          "coordinate": {
            "lat": 47.816065,
            "lon": -122.297267,
          },
          "feedPublisher": {
            "name": "Community Transit",
          },
          "id": "CommTrans:2109",
          "modes": [
            "BUS",
          ],
          "name": "Lynnwood Transit Center Bay C1",
          "type": "STOP",
        },
        {
          "agencies": [
            {
              "id": "CommTrans:29",
              "name": "Community Transit",
            },
          ],
          "code": "2119",
          "coordinate": {
            "lat": 47.816131,
            "lon": -122.296293,
          },
          "feedPublisher": {
            "name": "Community Transit",
          },
          "id": "CommTrans:2119",
          "modes": [
            "BUS",
          ],
          "name": "Lynnwood Transit Center Bay B3",
          "type": "STOP",
        },
        {
          "agencies": [
            {
              "id": "CommTrans:29",
              "name": "Community Transit",
            },
          ],
          "code": "2108",
          "coordinate": {
            "lat": 47.81612,
            "lon": -122.295584,
          },
          "feedPublisher": {
            "name": "Community Transit",
          },
          "id": "CommTrans:2108",
          "modes": [
            "BUS",
          ],
          "name": "Lynnwood Transit Center Bay B5",
          "type": "STOP",
        },
        {
          "agencies": [
            {
              "id": "CommTrans:29",
              "name": "Community Transit",
            },
          ],
          "code": "2167",
          "coordinate": {
            "lat": 47.816142,
            "lon": -122.29701,
          },
          "feedPublisher": {
            "name": "Community Transit",
          },
          "id": "CommTrans:2167",
          "modes": [
            "BUS",
          ],
          "name": "Lynnwood Transit Center Bay B1",
          "type": "STOP",
        },
        {
          "agencies": [
            {
              "id": "CommTrans:29",
              "name": "Community Transit",
            },
          ],
          "code": "2035",
          "coordinate": {
            "lat": 47.816082,
            "lon": -122.296421,
          },
          "feedPublisher": {
            "name": "Community Transit",
          },
          "id": "CommTrans:2035",
          "modes": [
            "BUS",
          ],
          "name": "Lynnwood Transit Center",
          "type": "STOP",
        },
        {
          "agencies": [
            {
              "id": "CommTrans:29",
              "name": "Community Transit",
            },
          ],
          "code": "2168",
          "coordinate": {
            "lat": 47.816135,
            "lon": -122.296598,
          },
          "feedPublisher": {
            "name": "Community Transit",
          },
          "id": "CommTrans:2168",
          "modes": [
            "BUS",
          ],
          "name": "Lynnwood Transit Center Bay B2",
          "type": "STOP",
        },
        {
          "agencies": [
            {
              "id": "CommTrans:29",
              "name": "Community Transit",
            },
          ],
          "code": "2113",
          "coordinate": {
            "lat": 47.815891,
            "lon": -122.297018,
          },
          "feedPublisher": {
            "name": "Community Transit",
          },
          "id": "CommTrans:2113",
          "modes": [
            "BUS",
          ],
          "name": "Lynnwood Transit Center Bay D1",
          "type": "STOP",
        },
        {
          "agencies": [
            {
              "id": "CommTrans:29",
              "name": "Community Transit",
            },
          ],
          "code": "2422",
          "coordinate": {
            "lat": 47.81588,
            "lon": -122.296301,
          },
          "feedPublisher": {
            "name": "Community Transit",
          },
          "id": "CommTrans:2422",
          "modes": [
            "BUS",
          ],
          "name": "Lynnwood Transit Center Bay D3",
          "type": "STOP",
        },
        {
          "agencies": [
            {
              "id": "CommTrans:29",
              "name": "Community Transit",
            },
          ],
          "code": "2543",
          "coordinate": {
            "lat": 47.815875,
            "lon": -122.295946,
          },
          "feedPublisher": {
            "name": "Community Transit",
          },
          "id": "CommTrans:2543",
          "modes": [
            "BUS",
          ],
          "name": "Lynnwood Transit Center Bay D4",
          "type": "STOP",
        },
        {
          "agencies": [
            {
              "id": "CommTrans:29",
              "name": "Community Transit",
            },
          ],
          "code": "2114",
          "coordinate": {
            "lat": 47.815884,
            "lon": -122.296606,
          },
          "feedPublisher": {
            "name": "Community Transit",
          },
          "id": "CommTrans:2114",
          "modes": [
            "BUS",
          ],
          "name": "Lynnwood Transit Center Bay D2",
          "type": "STOP",
        },
        {
          "agencies": [
            {
              "id": "CommTrans:29",
              "name": "Community Transit",
            },
          ],
          "code": "2115",
          "coordinate": {
            "lat": 47.816311,
            "lon": -122.296907,
          },
          "feedPublisher": {
            "name": "Community Transit",
          },
          "id": "CommTrans:2115",
          "modes": [
            "BUS",
          ],
          "name": "Lynnwood Transit Center Bay A2",
          "type": "STOP",
        },
        {
          "agencies": [
            {
              "id": "CommTrans:29",
              "name": "Community Transit",
            },
          ],
          "code": "2120",
          "coordinate": {
            "lat": 47.816125,
            "lon": -122.295937,
          },
          "feedPublisher": {
            "name": "Community Transit",
          },
          "id": "CommTrans:2120",
          "modes": [
            "BUS",
          ],
          "name": "Lynnwood Transit Center Bay B4",
          "type": "STOP",
        },
        {
          "agencies": [
            {
              "id": "CommTrans:29",
              "name": "Community Transit",
            },
          ],
          "code": "2110",
          "coordinate": {
            "lat": 47.816059,
            "lon": -122.296915,
          },
          "feedPublisher": {
            "name": "Community Transit",
          },
          "id": "CommTrans:2110",
          "modes": [
            "BUS",
          ],
          "name": "Lynnwood Transit Center Bay C2",
          "type": "STOP",
        },
        {
          "agencies": [
            {
              "id": "CommTrans:29",
              "name": "Community Transit",
            },
          ],
          "code": "2177",
          "coordinate": {
            "lat": 47.816049,
            "lon": -122.296254,
          },
          "feedPublisher": {
            "name": "Community Transit",
          },
          "id": "CommTrans:2177",
          "modes": [
            "BUS",
          ],
          "name": "Lynnwood Transit Center Bay C4",
          "type": "STOP",
        },
        {
          "agencies": [
            {
              "id": "CommTrans:29",
              "name": "Community Transit",
            },
          ],
          "code": "2111",
          "coordinate": {
            "lat": 47.816053,
            "lon": -122.296559,
          },
          "feedPublisher": {
            "name": "Community Transit",
          },
          "id": "CommTrans:2111",
          "modes": [
            "BUS",
          ],
          "name": "Lynnwood Transit Center Bay C3",
          "type": "STOP",
        },
      ],
    },
    {
      "primary": {
        "agencies": [
          {
            "id": "CommTrans:29",
            "name": "Community Transit",
          },
        ],
        "code": "3199",
        "coordinate": {
          "lat": 47.930175,
          "lon": -122.259953,
        },
        "feedPublisher": {
          "name": "Community Transit",
        },
        "id": "CommTrans:3199",
        "modes": [
          "BUS",
        ],
        "name": "Seaway Transit Center",
        "type": "STOP",
      },
      "secondaries": [],
    },
    {
      "primary": {
        "agencies": [],
        "coordinate": {
          "lat": 47.930222,
          "lon": -122.259948,
        },
        "feedPublisher": {
          "name": "Community Transit",
        },
        "id": "CommTrans:seaway",
        "modes": [],
        "name": "Seaway Transit Center",
        "type": "STATION",
      },
      "secondaries": [],
    },
    {
      "primary": {
        "agencies": [
          {
            "id": "CommTrans:29",
            "name": "Community Transit",
          },
        ],
        "coordinate": {
          "lat": 47.615541,
          "lon": -122.193674,
        },
        "feedPublisher": {
          "name": "Community Transit",
        },
        "id": "CommTrans:blvtc",
        "modes": [
          "BUS",
        ],
        "name": "Bellevue Transit Center",
        "type": "STATION",
      },
      "secondaries": [
        {
          "agencies": [
            {
              "id": "CommTrans:29",
              "name": "Community Transit",
            },
          ],
          "code": "355",
          "coordinate": {
            "lat": 47.615535,
            "lon": -122.194839,
          },
          "feedPublisher": {
            "name": "Community Transit",
          },
          "id": "CommTrans:355",
          "modes": [
            "BUS",
          ],
          "name": "Bellevue Transit Center Bay 4",
          "type": "STOP",
        },
        {
          "agencies": [
            {
              "id": "CommTrans:29",
              "name": "Community Transit",
            },
          ],
          "code": "2860",
          "coordinate": {
            "lat": 47.615437,
            "lon": -122.194537,
          },
          "feedPublisher": {
            "name": "Community Transit",
          },
          "id": "CommTrans:2860",
          "modes": [
            "BUS",
          ],
          "name": "Bellevue Transit Center Bay 8",
          "type": "STOP",
        },
      ],
    },
    {
      "primary": {
        "agencies": [
          {
            "id": "CommTrans:29",
            "name": "Community Transit",
          },
        ],
        "coordinate": {
          "lat": 47.99976,
          "lon": -122.10446,
        },
        "feedPublisher": {
          "name": "Community Transit",
        },
        "id": "CommTrans:lkspr",
        "modes": [
          "BUS",
        ],
        "name": "Lake Stevens Transit Center",
        "type": "STATION",
      },
      "secondaries": [
        {
          "agencies": [
            {
              "id": "CommTrans:29",
              "name": "Community Transit",
            },
          ],
          "code": "2666",
          "coordinate": {
            "lat": 47.999689,
            "lon": -122.103689,
          },
          "feedPublisher": {
            "name": "Community Transit",
          },
          "id": "CommTrans:2666",
          "modes": [
            "BUS",
          ],
          "name": "Lake Stevens Transit Center Bay 2",
          "type": "STOP",
        },
        {
          "agencies": [
            {
              "id": "CommTrans:29",
              "name": "Community Transit",
            },
          ],
          "code": "2982",
          "coordinate": {
            "lat": 47.999423,
            "lon": -122.104467,
          },
          "feedPublisher": {
            "name": "Community Transit",
          },
          "id": "CommTrans:2982",
          "modes": [
            "BUS",
          ],
          "name": "Lake Stevens Transit Center",
          "type": "STOP",
        },
        {
          "agencies": [
            {
              "id": "CommTrans:29",
              "name": "Community Transit",
            },
          ],
          "code": "2665",
          "coordinate": {
            "lat": 47.999479,
            "lon": -122.104383,
          },
          "feedPublisher": {
            "name": "Community Transit",
          },
          "id": "CommTrans:2665",
          "modes": [
            "BUS",
          ],
          "name": "Lake Stevens Transit Center Bay 1",
          "type": "STOP",
        },
      ],
    },
    {
      "primary": {
        "agencies": [
          {
            "id": "Kitsap:kt",
            "name": "Kitsap Transit",
          },
        ],
        "coordinate": {
          "lat": 47.5425906,
          "lon": -122.635696,
        },
        "feedPublisher": {
          "name": "Kitsap Transit",
        },
        "id": "Kitsap:1248",
        "modes": [
          "BUS",
        ],
        "name": "Port Orchard Transit Center",
        "type": "STOP",
      },
      "secondaries": [],
    },
    {
      "primary": {
        "agencies": [
          {
            "id": "Kitsap:kt",
            "name": "Kitsap Transit",
          },
        ],
        "coordinate": {
          "lat": 47.6637255,
          "lon": -122.6929522,
        },
        "feedPublisher": {
          "name": "Kitsap Transit",
        },
        "id": "Kitsap:214",
        "modes": [
          "BUS",
        ],
        "name": "Silverdale Transit Center (STC)",
        "type": "STOP",
      },
      "secondaries": [],
    },
    {
      "primary": {
        "agencies": [
          {
            "id": "CommTrans:29",
            "name": "Community Transit",
          },
        ],
        "code": "3017",
        "coordinate": {
          "lat": 47.929989,
          "lon": -122.260421,
        },
        "feedPublisher": {
          "name": "Community Transit",
        },
        "id": "CommTrans:3017",
        "modes": [
          "BUS",
        ],
        "name": "Seaway Transit Center Station",
        "type": "STOP",
      },
      "secondaries": [],
    },
    {
      "primary": {
        "agencies": [
          {
            "id": "Kitsap:kt",
            "name": "Kitsap Transit",
          },
        ],
        "coordinate": {
          "lat": 47.75944,
          "lon": -122.651086,
        },
        "feedPublisher": {
          "name": "Kitsap Transit",
        },
        "id": "Kitsap:1066",
        "modes": [
          "BUS",
        ],
        "name": "N. Viking Transit Center",
        "type": "STOP",
      },
      "secondaries": [],
    },
    {
      "primary": {
        "agencies": [
          {
            "id": "CommTrans:29",
            "name": "Community Transit",
          },
        ],
        "coordinate": {
          "lat": 47.774171,
          "lon": -122.340638,
        },
        "feedPublisher": {
          "name": "Community Transit",
        },
        "id": "CommTrans:arvil",
        "modes": [
          "BUS",
        ],
        "name": "Aurora Village Transit Center",
        "type": "STATION",
      },
      "secondaries": [
        {
          "agencies": [
            {
              "id": "CommTrans:29",
              "name": "Community Transit",
            },
          ],
          "code": "2875",
          "coordinate": {
            "lat": 47.774427,
            "lon": -122.341362,
          },
          "feedPublisher": {
            "name": "Community Transit",
          },
          "id": "CommTrans:2875",
          "modes": [
            "BUS",
          ],
          "name": "Aurora Village Transit Center Bay 5",
          "type": "STOP",
        },
        {
          "agencies": [
            {
              "id": "CommTrans:29",
              "name": "Community Transit",
            },
          ],
          "code": "2876",
          "coordinate": {
            "lat": 47.774305,
            "lon": -122.342002,
          },
          "feedPublisher": {
            "name": "Community Transit",
          },
          "id": "CommTrans:2876",
          "modes": [
            "BUS",
          ],
          "name": "Aurora Village Transit Center Bay 7",
          "type": "STOP",
        },
        {
          "agencies": [
            {
              "id": "CommTrans:29",
              "name": "Community Transit",
            },
          ],
          "code": "2877",
          "coordinate": {
            "lat": 47.77435,
            "lon": -122.34277,
          },
          "feedPublisher": {
            "name": "Community Transit",
          },
          "id": "CommTrans:2877",
          "modes": [
            "BUS",
          ],
          "name": "Aurora Village Transit Center",
          "type": "STOP",
        },
        {
          "agencies": [
            {
              "id": "CommTrans:29",
              "name": "Community Transit",
            },
          ],
          "code": "2742",
          "coordinate": {
            "lat": 47.774297,
            "lon": -122.341069,
          },
          "feedPublisher": {
            "name": "Community Transit",
          },
          "id": "CommTrans:2742",
          "modes": [
            "BUS",
          ],
          "name": "Aurora Village Station",
          "type": "STOP",
        },
      ],
    },
    {
      "primary": {
        "agencies": [
          {
            "id": "kcm:1",
            "name": "Metro Transit",
          },
        ],
        "code": "52306",
        "coordinate": {
          "lat": 47.4694099,
          "lon": -122.337318,
        },
        "feedPublisher": {
          "name": "King County Transit",
        },
        "id": "kcm:52306",
        "modes": [
          "BUS",
        ],
        "name": "Burien Transit Center - Bay 6",
        "type": "STOP",
      },
      "secondaries": [],
    },
    {
      "primary": {
        "agencies": [
          {
            "id": "Kitsap:kt",
            "name": "Kitsap Transit",
          },
        ],
        "coordinate": {
          "lat": 47.600636,
          "lon": -122.629476,
        },
        "feedPublisher": {
          "name": "Kitsap Transit",
        },
        "id": "Kitsap:1340",
        "modes": [
          "BUS",
        ],
        "name": "Wheaton Way Transit Center Southbound",
        "type": "STOP",
      },
      "secondaries": [],
    },
    {
      "primary": {
        "agencies": [
          {
            "id": "kcm:1",
            "name": "Metro Transit",
          },
        ],
        "code": "46477",
        "coordinate": {
          "lat": 47.4807777,
          "lon": -122.208549,
        },
        "feedPublisher": {
          "name": "King County Transit",
        },
        "id": "kcm:46477",
        "modes": [
          "BUS",
        ],
        "name": "Renton Transit Center - Bay 2",
        "type": "STOP",
      },
      "secondaries": [],
    },
    {
      "primary": {
        "agencies": [
          {
            "id": "kcm:40",
            "name": "Sound Transit",
          },
          {
            "id": "kcm:1",
            "name": "Metro Transit",
          },
        ],
        "code": "46476",
        "coordinate": {
          "lat": 47.4807777,
          "lon": -122.208786,
        },
        "feedPublisher": {
          "name": "King County Transit",
        },
        "id": "kcm:46476",
        "modes": [
          "BUS",
        ],
        "name": "Renton Transit Center - Bay 1",
        "type": "STOP",
      },
      "secondaries": [],
    },
    {
      "primary": {
        "agencies": [
          {
            "id": "Kitsap:kt",
            "name": "Kitsap Transit",
          },
        ],
        "coordinate": {
          "lat": 47.600601,
          "lon": -122.629983,
        },
        "feedPublisher": {
          "name": "Kitsap Transit",
        },
        "id": "Kitsap:1324",
        "modes": [
          "BUS",
        ],
        "name": "Wheaton Way Transit Center (WWTC)",
        "type": "STOP",
      },
      "secondaries": [],
    },
    {
      "primary": {
        "agencies": [
          {
            "id": "kcm:1",
            "name": "Metro Transit",
          },
        ],
        "code": "46463",
        "coordinate": {
          "lat": 47.4800987,
          "lon": -122.207756,
        },
        "feedPublisher": {
          "name": "King County Transit",
        },
        "id": "kcm:46463",
        "modes": [
          "BUS",
        ],
        "name": "Renton Transit Center - Bay 10",
        "type": "STOP",
      },
      "secondaries": [],
    },
    {
      "primary": {
        "agencies": [
          {
            "id": "kcm:1",
            "name": "Metro Transit",
          },
          {
            "id": "kcm:40",
            "name": "Sound Transit",
          },
        ],
        "code": "67655",
        "coordinate": {
          "lat": 47.6155014,
          "lon": -122.194389,
        },
        "feedPublisher": {
          "name": "King County Transit",
        },
        "id": "kcm:67655",
        "modes": [
          "BUS",
        ],
        "name": "Bellevue Transit Center - Bay 8",
        "type": "STOP",
      },
      "secondaries": [],
    },
    {
      "primary": {
        "agencies": [
          {
            "id": "kcm:1",
            "name": "Metro Transit",
          },
        ],
        "code": "67654",
        "coordinate": {
          "lat": 47.6155052,
          "lon": -122.193909,
        },
        "feedPublisher": {
          "name": "King County Transit",
        },
        "id": "kcm:67654",
        "modes": [
          "BUS",
        ],
        "name": "Bellevue Transit Center - Bay 7",
        "type": "STOP",
      },
      "secondaries": [],
    },
    {
      "primary": {
        "agencies": [
          {
            "id": "kcm:1",
            "name": "Metro Transit",
          },
          {
            "id": "kcm:40",
            "name": "Sound Transit",
          },
        ],
        "code": "68005",
        "coordinate": {
          "lat": 47.6155014,
          "lon": -122.19426,
        },
        "feedPublisher": {
          "name": "King County Transit",
        },
        "id": "kcm:68005",
        "modes": [
          "BUS",
        ],
        "name": "Bellevue Transit Center - Bay 5",
        "type": "STOP",
      },
      "secondaries": [],
    },
    {
      "primary": {
        "agencies": [
          {
            "id": "kcm:1",
            "name": "Metro Transit",
          },
        ],
        "code": "46478",
        "coordinate": {
          "lat": 47.4804993,
          "lon": -122.208717,
        },
        "feedPublisher": {
          "name": "King County Transit",
        },
        "id": "kcm:46478",
        "modes": [
          "BUS",
        ],
        "name": "Renton Transit Center - Bay 3",
        "type": "STOP",
      },
      "secondaries": [],
    },
    {
      "primary": {
        "agencies": [
          {
            "id": "kcm:40",
            "name": "Sound Transit",
          },
          {
            "id": "kcm:1",
            "name": "Metro Transit",
          },
        ],
        "code": "73227",
        "coordinate": {
          "lat": 47.6765938,
          "lon": -122.124939,
        },
        "feedPublisher": {
          "name": "King County Transit",
        },
        "id": "kcm:73227",
        "modes": [
          "BUS",
        ],
        "name": "Redmond Transit Center - Bay 1",
        "type": "STOP",
      },
      "secondaries": [],
    },
    {
      "primary": {
        "agencies": [
          {
            "id": "kcm:1",
            "name": "Metro Transit",
          },
          {
            "id": "kcm:40",
            "name": "Sound Transit",
          },
        ],
        "code": "57774",
        "coordinate": {
          "lat": 47.3057899,
          "lon": -122.232079,
        },
        "feedPublisher": {
          "name": "King County Transit",
        },
        "id": "kcm:57774",
        "modes": [
          "BUS",
        ],
        "name": "Auburn Transit Center - Bay 2",
        "type": "STOP",
      },
      "secondaries": [],
    },
    {
      "primary": {
        "agencies": [
          {
            "id": "kcm:1",
            "name": "Metro Transit",
          },
        ],
        "code": "64593",
        "coordinate": {
          "lat": 47.5424728,
          "lon": -122.06221,
        },
        "feedPublisher": {
          "name": "King County Transit",
        },
        "id": "kcm:64593",
        "modes": [
          "BUS",
        ],
        "name": "Issaquah Transit Center - Bay 4",
        "type": "STOP",
      },
      "secondaries": [],
    },
    {
      "primary": {
        "agencies": [
          {
            "id": "kcm:1",
            "name": "Metro Transit",
          },
        ],
        "code": "57773",
        "coordinate": {
          "lat": 47.3062248,
          "lon": -122.232079,
        },
        "feedPublisher": {
          "name": "King County Transit",
        },
        "id": "kcm:57773",
        "modes": [
          "BUS",
        ],
        "name": "Auburn Transit Center - Bay 1",
        "type": "STOP",
      },
      "secondaries": [],
    },
    {
      "primary": {
        "agencies": [
          {
            "id": "kcm:1",
            "name": "Metro Transit",
          },
          {
            "id": "kcm:40",
            "name": "Sound Transit",
          },
        ],
        "code": "64585",
        "coordinate": {
          "lat": 47.541584,
          "lon": -122.062302,
        },
        "feedPublisher": {
          "name": "King County Transit",
        },
        "id": "kcm:64585",
        "modes": [
          "BUS",
        ],
        "name": "Issaquah Transit Center - Bay 3",
        "type": "STOP",
      },
      "secondaries": [],
    },
  ],
}
`;

exports[`geocoder PELIAS should get location from geocode feature 1`] = `
{
  "lat": 45.516198,
  "lon": -122.67324,
  "name": "Mill Ends Park, Portland, OR, USA",
  "rawGeocodedFeature": {
    "geometry": {
      "coordinates": [
        -122.67324,
        45.516198,
      ],
      "type": "Point",
    },
    "properties": {
      "label": "Mill Ends Park, Portland, OR, USA",
    },
  },
}
`;

exports[`geocoder PELIAS should make autocomplete query 1`] = `
{
  "bbox": [
    -122.673377,
    45.516278,
    -122.673377,
    45.516278,
  ],
  "features": [
    {
      "geometry": {
        "coordinates": [
          -122.673377,
          45.516278,
        ],
        "type": "Point",
      },
      "properties": {
        "accuracy": "point",
        "continent": "North America",
        "continent_gid": "whosonfirst:continent:102191575",
        "country": "United States",
        "country_a": "USA",
        "country_gid": "whosonfirst:country:85633793",
        "county": "Multnomah County",
        "county_a": "MU",
        "county_gid": "whosonfirst:county:102081631",
        "distance": 0.491,
        "gid": "openstreetmap:venue:node/4243944023",
        "id": "node/4243944023",
        "label": "Mill Ends Park, Portland, OR, USA",
        "layer": "venue",
        "locality": "Portland",
        "locality_gid": "whosonfirst:locality:101715829",
        "name": "Mill Ends Park",
        "neighbourhood": "Downtown",
        "neighbourhood_gid": "whosonfirst:neighbourhood:85867131",
        "region": "Oregon",
        "region_a": "OR",
        "region_gid": "whosonfirst:region:85688513",
        "source": "openstreetmap",
        "source_id": "node/4243944023",
      },
      "type": "Feature",
    },
  ],
  "geocoding": {
    "attribution": "http://lb-st-mapgeo.tri-met.org:4000/attribution",
    "engine": {
      "author": "Mapzen",
      "name": "Pelias",
      "version": "1.0",
    },
    "query": {
      "focus.point.lat": 45.52,
      "focus.point.lon": -122.67,
      "lang": {
        "defaulted": true,
        "iso6391": "en",
        "iso6393": "eng",
        "name": "English",
      },
      "parsed_text": {},
      "parser": "addressit",
      "private": false,
      "size": 10,
      "text": "Mill Ends",
      "tokens": [
        "Mill",
        "Ends",
      ],
    },
    "timestamp": 1563948844191,
    "version": "0.2",
    "warnings": [
      "Invalid Parameter: api_key",
    ],
  },
  "isomorphicMapzenSearchQuery": {
    "api_key": "dummy-mapzen-key",
    "layers": "address,venue,street,intersection",
    "text": "Mill Ends",
  },
  "type": "FeatureCollection",
}
`;

exports[`geocoder PELIAS should make reverse query 1`] = `
{
  "lat": 45.516198,
  "lon": -122.67324,
  "name": "Mill Ends Park, 56 SW Taylor St, Portland",
  "rawGeocodedFeature": {
    "accuracy": "point",
    "address": "Mill Ends Park, 56 SW Taylor St, Portland 97204",
    "confidence": 0.9,
    "continent": "North America",
    "continent_gid": "whosonfirst:continent:102191575",
    "country": "United States",
    "country_a": "USA",
    "country_gid": "whosonfirst:country:85633793",
    "county": "Multnomah County",
    "county_a": "MU",
    "county_gid": "whosonfirst:county:102081631",
    "distance": 0.001,
    "gid": "openstreetmap:venue:way/156366633",
    "housenumber": "56",
    "id": "way/156366633",
    "label": "Mill Ends Park, 56 SW Taylor St, Portland",
    "latlng": {
      "lat": 45.516201,
      "lon": -122.673245,
    },
    "layer": "venue",
    "locality": "Portland",
    "locality_gid": "whosonfirst:locality:101715829",
    "name": "Mill Ends Park",
    "neighbourhood": "Downtown",
    "neighbourhood_gid": "whosonfirst:neighbourhood:85867131",
    "postalcode": "97204",
    "region": "Oregon",
    "region_a": "OR",
    "region_gid": "whosonfirst:region:85688513",
    "source": "openstreetmap",
    "source_id": "way/156366633",
    "street": "SW Taylor St",
  },
}
`;

exports[`geocoder PELIAS should make reverse query with featurecollection enabled 1`] = `
{
  "bbox": [
    -122.673883,
    45.5161964,
    -122.673234,
    45.516689,
  ],
  "features": [
    {
      "bbox": [
        -122.6732557,
        45.5161964,
        -122.673234,
        45.5162067,
      ],
      "geometry": {
        "coordinates": [
          -122.673245,
          45.516201,
        ],
        "type": "Point",
      },
      "properties": {
        "accuracy": "point",
        "confidence": 0.9,
        "continent": "North America",
        "continent_gid": "whosonfirst:continent:102191575",
        "country": "United States",
        "country_a": "USA",
        "country_gid": "whosonfirst:country:85633793",
        "county": "Multnomah County",
        "county_a": "MU",
        "county_gid": "whosonfirst:county:102081631",
        "distance": 0.001,
        "gid": "openstreetmap:venue:way/156366633",
        "housenumber": "56",
        "id": "way/156366633",
        "label": "Mill Ends Park, 56 SW Taylor St, Portland",
        "layer": "venue",
        "locality": "Portland",
        "locality_gid": "whosonfirst:locality:101715829",
        "name": "Mill Ends Park",
        "neighbourhood": "Downtown",
        "neighbourhood_gid": "whosonfirst:neighbourhood:85867131",
        "postalcode": "97204",
        "region": "Oregon",
        "region_a": "OR",
        "region_gid": "whosonfirst:region:85688513",
        "source": "openstreetmap",
        "source_id": "way/156366633",
        "street": "SW Taylor St",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.673609,
          45.516337,
        ],
        "type": "Point",
      },
      "properties": {
        "accuracy": "point",
        "confidence": 0.8,
        "continent": "North America",
        "continent_gid": "whosonfirst:continent:102191575",
        "country": "United States",
        "country_a": "USA",
        "country_gid": "whosonfirst:country:85633793",
        "county": "Multnomah County",
        "county_a": "MU",
        "county_gid": "whosonfirst:county:102081631",
        "distance": 0.033,
        "gid": "openaddresses:address:us/or/portland_metro:bd3f9863242e4ec7",
        "housenumber": "833",
        "id": "us/or/portland_metro:bd3f9863242e4ec7",
        "label": "833 SW Naito Pkwy, Portland, OR, USA",
        "layer": "address",
        "locality": "Portland",
        "locality_gid": "whosonfirst:locality:101715829",
        "name": "833 SW Naito Pkwy",
        "neighbourhood": "Downtown",
        "neighbourhood_gid": "whosonfirst:neighbourhood:85867131",
        "postalcode": "97204",
        "region": "Oregon",
        "region_a": "OR",
        "region_gid": "whosonfirst:region:85688513",
        "source": "openaddresses",
        "source_id": "us/or/portland_metro:bd3f9863242e4ec7",
        "street": "SW Naito Pkwy",
      },
      "type": "Feature",
    },
  ],
  "geocoding": {
    "attribution": "http://lb-st-mapgeo.tri-met.org:4000/attribution",
    "engine": {
      "author": "Mapzen",
      "name": "Pelias",
      "version": "1.0",
    },
    "query": {
      "boundary.circle.lat": 45.516198,
      "boundary.circle.lon": -122.67324,
      "lang": {
        "defaulted": true,
        "iso6391": "en",
        "iso6393": "eng",
        "name": "English",
      },
      "point.lat": 45.516198,
      "point.lon": -122.67324,
      "private": false,
      "querySize": 20,
      "size": 10,
    },
    "timestamp": 1563949092620,
    "version": "0.2",
    "warnings": [
      "Invalid Parameter: api_key",
    ],
  },
  "isomorphicMapzenSearchQuery": {
    "api_key": "dummy-mapzen-key",
    "point": {
      "lat": 45.516198,
      "lon": -122.67324,
    },
  },
  "type": "FeatureCollection",
}
`;

exports[`geocoder PELIAS should make search query 1`] = `
{
  "bbox": [
    -122.821522,
    45.495264,
    -122.475528,
    45.516278,
  ],
  "features": [
    {
      "geometry": {
        "coordinates": [
          -122.673377,
          45.516278,
        ],
        "type": "Point",
      },
      "properties": {
        "accuracy": "point",
        "confidence": 1,
        "continent": "North America",
        "continent_gid": "whosonfirst:continent:102191575",
        "country": "United States",
        "country_a": "USA",
        "country_gid": "whosonfirst:country:85633793",
        "county": "Multnomah County",
        "county_a": "MU",
        "county_gid": "whosonfirst:county:102081631",
        "distance": 0.491,
        "gid": "openstreetmap:venue:node/4243944023",
        "id": "node/4243944023",
        "label": "Mill Ends Park, Portland, OR, USA",
        "layer": "venue",
        "locality": "Portland",
        "locality_gid": "whosonfirst:locality:101715829",
        "match_type": "exact",
        "name": "Mill Ends Park",
        "neighbourhood": "Downtown",
        "neighbourhood_gid": "whosonfirst:neighbourhood:85867131",
        "region": "Oregon",
        "region_a": "OR",
        "region_gid": "whosonfirst:region:85688513",
        "source": "openstreetmap",
        "source_id": "node/4243944023",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.681441,
          45.511851,
        ],
        "type": "Point",
      },
      "properties": {
        "accuracy": "centroid",
        "confidence": 1,
        "continent": "North America",
        "continent_gid": "whosonfirst:continent:102191575",
        "country": "United States",
        "country_a": "USA",
        "country_gid": "whosonfirst:country:85633793",
        "county": "Multnomah County",
        "county_a": "MU",
        "county_gid": "whosonfirst:county:102081631",
        "distance": 1.273,
        "gid": "transit:station:2584-1136::TRIMET::station",
        "id": "2584-1136::TRIMET::station",
        "label": "PSU Urban Center/SW 5th & Mill MAX Station, Portland, OR, USA",
        "layer": "station",
        "locality": "Portland",
        "locality_gid": "whosonfirst:locality:101715829",
        "match_type": "exact",
        "name": "PSU Urban Center/SW 5th & Mill MAX Station",
        "neighbourhood": "Downtown",
        "neighbourhood_gid": "whosonfirst:neighbourhood:85867131",
        "postalcode": "97201",
        "region": "Oregon",
        "region_a": "OR",
        "region_gid": "whosonfirst:region:85688513",
        "source": "transit",
        "source_id": "2584-1136::trimet::station",
        "street": "SW 5th & Mill",
      },
      "type": "Feature",
    },
  ],
  "geocoding": {
    "attribution": "http://lb-st-mapgeo.tri-met.org:4000/attribution",
    "engine": {
      "author": "Mapzen",
      "name": "Pelias",
      "version": "1.0",
    },
    "query": {
      "focus.point.lat": 45.52,
      "focus.point.lon": -122.67,
      "lang": {
        "defaulted": true,
        "iso6391": "en",
        "iso6393": "eng",
        "name": "English",
      },
      "parsed_text": {},
      "parser": "addressit",
      "private": false,
      "querySize": 20,
      "size": 10,
      "text": "Mill Ends",
    },
    "timestamp": 1563949031708,
    "version": "0.2",
    "warnings": [
      "Invalid Parameter: api_key",
    ],
  },
  "isomorphicMapzenSearchQuery": {
    "api_key": "dummy-mapzen-key",
    "size": 10,
    "text": "Mill Ends",
  },
  "type": "FeatureCollection",
}
`;

exports[`geocoder PHOTON should get location from geocode feature 1`] = `
{
  "lat": 45.51621,
  "lon": -122.67325,
  "name": "Mill Ends Park, Southwest Naito Parkway, Downtown, OR, 97204, Portland, États-Unis d'Amérique",
  "rawGeocodedFeature": {
    "geometry": {
      "coordinates": [
        -122.67325,
        45.51621,
      ],
      "type": "Point",
    },
    "properties": {
      "city": "Portland",
      "country": "États-Unis d'Amérique",
      "district": "Downtown",
      "label": "Mill Ends Park, Southwest Naito Parkway, Downtown, OR, 97204, Portland, États-Unis d'Amérique",
      "name": "Mill Ends Park",
      "postcode": "97204",
      "state": "OR",
      "street": "Southwest Naito Parkway",
    },
  },
}
`;

exports[`geocoder PHOTON should make autocomplete query 1`] = `
{
  "features": [
    {
      "geometry": {
        "coordinates": [
          -122.67325034999999,
          45.51621765,
        ],
        "type": "Point",
      },
      "properties": {
        "country": "États-Unis d'Amérique",
        "countrycode": "US",
        "extent": [
          -122.673255,
          45.5162209,
          -122.6732457,
          45.5162144,
        ],
        "label": "Mill Ends Park, États-Unis d'Amérique",
        "name": "Mill Ends Park",
        "osm_id": 156366633,
        "osm_key": "leisure",
        "osm_type": "W",
        "osm_value": "park",
        "type": "locality",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.6733766,
          45.5162784,
        ],
        "type": "Point",
      },
      "properties": {
        "city": "Portland",
        "country": "États-Unis d'Amérique",
        "countrycode": "US",
        "county": "Multnomah",
        "district": "Downtown",
        "label": "Mill Ends Park, Southwest Naito Parkway, Downtown, OR, 97204, Portland, États-Unis d'Amérique",
        "name": "Mill Ends Park",
        "osm_id": 4243944023,
        "osm_key": "tourism",
        "osm_type": "N",
        "osm_value": "information",
        "postcode": "97204",
        "state": "OR",
        "street": "Southwest Naito Parkway",
        "type": "house",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -2.4756598,
          53.7547536,
        ],
        "type": "Point",
      },
      "properties": {
        "city": "Blackburn",
        "country": "Royaume-Uni",
        "countrycode": "GB",
        "county": "Blackburn with Darwen",
        "district": "Four Lane Ends",
        "extent": [
          -2.4758741,
          53.7548952,
          -2.4749263,
          53.7544719,
        ],
        "label": "New Mill Street, Four Lane Ends, Angleterre, BB1 6JS, Blackburn, Royaume-Uni",
        "name": "New Mill Street",
        "osm_id": 130281365,
        "osm_key": "highway",
        "osm_type": "W",
        "osm_value": "residential",
        "postcode": "BB1 6JS",
        "state": "Angleterre",
        "type": "street",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -2.0318091,
          53.8904692,
        ],
        "type": "Point",
      },
      "properties": {
        "city": "Cowling",
        "country": "Royaume-Uni",
        "countrycode": "GB",
        "county": "North Yorkshire",
        "district": "Cowling",
        "extent": [
          -2.0319873,
          53.8905873,
          -2.0317233,
          53.8903037,
        ],
        "label": "The Old Saw Mill, Cowling, Angleterre, BD22 0JT, Cowling, Royaume-Uni",
        "locality": "Lane Ends",
        "name": "The Old Saw Mill",
        "osm_id": 194668944,
        "osm_key": "highway",
        "osm_type": "W",
        "osm_value": "residential",
        "postcode": "BD22 0JT",
        "state": "Angleterre",
        "type": "street",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -74.4846831,
          40.7940011,
        ],
        "type": "Point",
      },
      "properties": {
        "city": "Morristown",
        "country": "États-Unis d'Amérique",
        "countrycode": "US",
        "county": "Morris",
        "label": "The Decorating Store at Terminal Mill Ends, Mount Kemble Avenue, NJ, 07960, Morristown, États-Unis d'Amérique",
        "name": "The Decorating Store at Terminal Mill Ends",
        "osm_id": 9634530317,
        "osm_key": "shop",
        "osm_type": "N",
        "osm_value": "interior_decoration",
        "postcode": "07960",
        "state": "NJ",
        "street": "Mount Kemble Avenue",
        "type": "house",
      },
      "type": "Feature",
    },
  ],
  "type": "FeatureCollection",
}
`;

exports[`geocoder PHOTON should make reverse query 1`] = `
{
  "lat": 45.516198,
  "lon": -122.67324,
  "name": "Mill Ends Park, États-Unis d'Amérique",
  "rawGeocodedFeature": {
    "geometry": {
      "coordinates": [
        -122.67325034999999,
        45.51621765,
      ],
      "type": "Point",
    },
    "properties": {
      "country": "États-Unis d'Amérique",
      "countrycode": "US",
      "extent": [
        -122.673255,
        45.5162209,
        -122.6732457,
        45.5162144,
      ],
      "name": "Mill Ends Park",
      "osm_id": 156366633,
      "osm_key": "leisure",
      "osm_type": "W",
      "osm_value": "park",
      "type": "locality",
    },
    "type": "Feature",
  },
}
`;

exports[`geocoder PHOTON should make reverse query with featurecollection enabled 1`] = `
{
  "features": [
    {
      "geometry": {
        "coordinates": [
          -122.67325034999999,
          45.51621765,
        ],
        "type": "Point",
      },
      "properties": {
        "country": "États-Unis d'Amérique",
        "countrycode": "US",
        "extent": [
          -122.673255,
          45.5162209,
          -122.6732457,
          45.5162144,
        ],
        "label": "Mill Ends Park, États-Unis d'Amérique",
        "name": "Mill Ends Park",
        "osm_id": 156366633,
        "osm_key": "leisure",
        "osm_type": "W",
        "osm_value": "park",
        "type": "locality",
      },
      "type": "Feature",
    },
  ],
  "point": {
    "lat": 45.516198,
    "lon": -122.67324,
  },
  "type": "FeatureCollection",
}
`;

exports[`geocoder PHOTON should make search query 1`] = `
{
  "features": [
    {
      "geometry": {
        "coordinates": [
          -122.67325034999999,
          45.51621765,
        ],
        "type": "Point",
      },
      "properties": {
        "country": "États-Unis d'Amérique",
        "countrycode": "US",
        "extent": [
          -122.673255,
          45.5162209,
          -122.6732457,
          45.5162144,
        ],
        "label": "Mill Ends Park, États-Unis d'Amérique",
        "name": "Mill Ends Park",
        "osm_id": 156366633,
        "osm_key": "leisure",
        "osm_type": "W",
        "osm_value": "park",
        "type": "locality",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -122.6733766,
          45.5162784,
        ],
        "type": "Point",
      },
      "properties": {
        "city": "Portland",
        "country": "États-Unis d'Amérique",
        "countrycode": "US",
        "county": "Multnomah",
        "district": "Downtown",
        "label": "Mill Ends Park, Southwest Naito Parkway, Downtown, OR, 97204, Portland, États-Unis d'Amérique",
        "name": "Mill Ends Park",
        "osm_id": 4243944023,
        "osm_key": "tourism",
        "osm_type": "N",
        "osm_value": "information",
        "postcode": "97204",
        "state": "OR",
        "street": "Southwest Naito Parkway",
        "type": "house",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -2.4756598,
          53.7547536,
        ],
        "type": "Point",
      },
      "properties": {
        "city": "Blackburn",
        "country": "Royaume-Uni",
        "countrycode": "GB",
        "county": "Blackburn with Darwen",
        "district": "Four Lane Ends",
        "extent": [
          -2.4758741,
          53.7548952,
          -2.4749263,
          53.7544719,
        ],
        "label": "New Mill Street, Four Lane Ends, Angleterre, BB1 6JS, Blackburn, Royaume-Uni",
        "name": "New Mill Street",
        "osm_id": 130281365,
        "osm_key": "highway",
        "osm_type": "W",
        "osm_value": "residential",
        "postcode": "BB1 6JS",
        "state": "Angleterre",
        "type": "street",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -2.0318091,
          53.8904692,
        ],
        "type": "Point",
      },
      "properties": {
        "city": "Cowling",
        "country": "Royaume-Uni",
        "countrycode": "GB",
        "county": "North Yorkshire",
        "district": "Cowling",
        "extent": [
          -2.0319873,
          53.8905873,
          -2.0317233,
          53.8903037,
        ],
        "label": "The Old Saw Mill, Cowling, Angleterre, BD22 0JT, Cowling, Royaume-Uni",
        "locality": "Lane Ends",
        "name": "The Old Saw Mill",
        "osm_id": 194668944,
        "osm_key": "highway",
        "osm_type": "W",
        "osm_value": "residential",
        "postcode": "BD22 0JT",
        "state": "Angleterre",
        "type": "street",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          -74.4846831,
          40.7940011,
        ],
        "type": "Point",
      },
      "properties": {
        "city": "Morristown",
        "country": "États-Unis d'Amérique",
        "countrycode": "US",
        "county": "Morris",
        "label": "The Decorating Store at Terminal Mill Ends, Mount Kemble Avenue, NJ, 07960, Morristown, États-Unis d'Amérique",
        "name": "The Decorating Store at Terminal Mill Ends",
        "osm_id": 9634530317,
        "osm_key": "shop",
        "osm_type": "N",
        "osm_value": "interior_decoration",
        "postcode": "07960",
        "state": "NJ",
        "street": "Mount Kemble Avenue",
        "type": "house",
      },
      "type": "Feature",
    },
  ],
  "type": "FeatureCollection",
}
`;
